# expense-reviewer

./: .vercelignore  Makefile  agents-cli-manifest.yaml  combined_cacerts.pem  product_model.py  pyproject.toml  requirements.txt  test_expense_graph.py
app/: __init__.py  agent_runtime_app.py  expense_graph.py  main.py
artifacts/grade_results/: results_20260618_130028.html  results_20260618_130028.json  results_20260618_130611.html  results_20260618_130611.json  results_20260618_130835.html  results_20260618_130835.json  results_20260618_130935.html  results_20260618_130935.json
artifacts/traces/: generated_traces.json
scratch/: inspect_trigger.py  send_mock_payload.py  test_ambient.py  test_e2e_runner.py
submission_frontend/: main.py  pyproject.toml  requirements.txt
tests/: conftest.py
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py  test_agent_runtime_app.py
