[project]
name = "submission_frontend"
version = "0.1.0"
description = "Manager Dashboard service for Ambient Expense Reviewer"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.156.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
